--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,6 @@ description: >- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
   HTML5 UP's sleek, responsive site template Prologue.
 author: Nick Wolf
-email: your-email@example.com
 avatar: assets/images/avatar.jpg
 
 # You'll want to customize url and baseurl for your own site:
@@ -46,12 +45,12 @@ url: "" # the base hostname & protocol for your site
 # Social settings
 facebook_url: https://fb.me/quintrino
 github_url: quintrino
-googleplus_url: +quintrino
+googleplus_url: https://google.com/+quintrino
 instagram_url:
-linkedin_url:
+linkedin_url: https://linkedin.com/in/quintrino
 pinterest_url:
 slack_url:
-twitter_url: quintrino
+twitter_url: https://twitter.com/quintrino
 
 # Google Analytics Tracking ID goes here:
 google_analytics:
