--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Nick Wolf
-subtitle: Human Optimizer
+subtitle: Optimizing the Human Experience
 description: >- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
   HTML5 UP's sleek, responsive site template Prologue.
@@ -39,7 +39,7 @@ author: Nick Wolf
 avatar: assets/images/avatar.jpg
 
 # You'll want to customize url and baseurl for your own site:
-baseurl: "/jekyll-theme-prologue" # the subpath of your site, e.g. /blog
+baseurl: "" #  /jekyll-theme-prologue the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 
 # Social settings
