Update config description

--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,7 @@
 title: Nick Wolf
 subtitle: Optimizing the Human Experience
 description: >- # this means to ignore newlines until "baseurl:"
-  This is the demo site for a Jekyll theme version of
-  HTML5 UP's sleek, responsive site template Prologue.
+  Life is often not a matter of hope, but of will.
 author: Nick Wolf
 avatar: assets/images/avatar.jpg
 
