Add Google Analytics key to config

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ url: "" # the base hostname & protocol for your site
 facebook_url: https://fb.me/quintrino
 github_url: https://github.com/quintrino
 googleplus_url: https://google.com/+quintrino
-instagram_url: 
+instagram_url:
 linkedin_url: https://linkedin.com/in/quintrino
 github_url:
 stackoverflow_url:
@@ -55,7 +55,7 @@ twitter_url: https://twitter.com/quintrino
 
 
 # Google Analytics Tracking ID goes here:
-google_analytics:
+google_analytics: UA-139530893-1
 
 # The following settings are NECESSARY for the Prologue theme to run:
 remote_theme: chrisbobbe/jekyll-theme-prologue
